# yolo_project

./: .gitignore  README.md  detect_test.ipynb  pyproject.toml  v8_predictTest.py
sources/: sources_description.md
