[project]
name = "yolo-project"
version = "0.0.1"
description = "A yolo test project"
authors = [
    {name = "Nobutake Kamiya",email = "nobuta77to99@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics (>=8.3.146,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
